--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,4 @@
 spring:
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
-
   datasource:
     url: jdbc:mariadb://localhost:3307/goorm_db
     username: goorm-board
@@ -20,3 +15,8 @@ spring:
 
   thymeleaf:
     cache: false
+
+logging:
+  level:
+    org.thymeleaf: DEBUG
+    web: DEBUG
