오류 프로퍼티 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,10 @@ spring:
   thymeleaf:
     cache: false
 
+  messages:
+    basename: messages/ValidationMessages
+    encoding: UTF-8
+
 logging:
   level:
     org.thymeleaf: DEBUG
