프래쉬 메시지 완료

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
     cache: false
 
   messages:
-    basename: messages/ValidationMessages
+    basename: messages/ValidationMessages,messages/i18n/messages
     encoding: UTF-8
 
 logging:
