--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,25 +1,23 @@
 spring:
+  profiles:
+    active: mybatis  # 기본 프로파일은 JPA 사용
+
+  # 공통 데이터소스 설정
   datasource:
     url: jdbc:mariadb://localhost:3307/goorm_db
     username: goorm-board
     password: goorm1234
 
-  jpa:
-    show-sql: true
-    hibernate:
-      ddl-auto: none
-    properties:
-      hibernate:
-        format_sql: true
-
-
+  # 공통 Thymeleaf 설정
   thymeleaf:
     cache: false
 
-  messages:
-    basename: messages/validation/ValidationMessages,messages/i18n/messages
-    encoding: UTF-8
+  # 공통 Flyway 설정
+  flyway:
+    locations: classpath:db/migration/maria
+    baseline-on-migrate: true
 
+# 공통 로깅 설정
 logging:
   level:
     org.springframework.security: DEBUG
