--- a/src/main/resources/messages/stock/stock.properties
+++ b/src/main/resources/messages/stock/stock.properties
@@ -1,14 +1,18 @@
 # Stock Management System Messages
 
 # Main Page
-main.title=재고 관리 시스템
-main.welcome=재고 관리 시스템에 오신 것을 환영합니다
-main.description=효율적인 재고 관리로 비즈니스를 성장시키세요
+main.title=goorm board
+main.welcome=Goorm Board에 오신 것을 환영합니다!
+main.description=Spring Boot + Thymeleaf로 만든 게시판입니다
+main.greeting.hello=안녕하세요
+main.login.message=로그인하여 더 많은 기능을 이용하세요!
+main.goto.posts=게시판 보러가기
 main.get.started=시작하기
 main.learn.more=자세히 보기
 
 # Header Navigation
 nav.home=홈
+nav.posts=게시판
 nav.signup=회원가입
 nav.login=로그인
 nav.profile=프로필
@@ -16,6 +20,27 @@ nav.logout=로그아웃
 nav.language.ko=한국어
 nav.language.en=English
 nav.user.greeting=님
+
+# Board Messages
+board.title=게시판
+board.create=글쓰기
+board.list=글 목록
+board.detail=글 상세
+board.edit=글 수정
+board.delete=글 삭제
+board.author=작성자
+board.title.label=제목
+board.content.label=내용
+board.created=작성일
+board.updated=수정일
+board.viewcount=조회수
+board.actions=작업
+board.number=번호
+board.no.posts=등록된 게시글이 없습니다
+board.back.to.list=목록으로
+board.confirm.delete=정말로 삭제하시겠습니까?
+
+
 
 # Authentication
 auth.signup.title=회원가입
@@ -33,6 +58,10 @@ auth.logout.button=로그아웃
 auth.update.profile=프로필 수정
 auth.already.member=이미 회원이신가요?
 auth.not.member=아직 회원이 아니신가요?
+auth.current.info=현재 정보
+auth.joined.date=가입일
+auth.new.password.optional=새 비밀번호 (선택사항)
+auth.new.password.confirm=새 비밀번호 확인
 
 # Flash Messages
 flash.signup.success=회원가입이 완료되었습니다
@@ -48,21 +77,22 @@ error.current.password.invalid=현재 비밀번호가 일치하지 않습니다
 error.user.not.found=사용자를 찾을 수 없습니다
 error.access.denied=접근 권한이 없습니다
 
-# Common
-common.save=저장
-common.cancel=취소
-common.edit=수정
-common.delete=삭제
-common.view=보기
-common.search=검색
-common.reset=초기화
-common.back=뒤로가기
-common.next=다음
-common.previous=이전
-common.close=닫기
-common.confirm=확인
-common.yes=예
-common.no=아니오
+# Common Buttons & Actions
+button.submit=등록
+button.cancel=취소
+button.save=저장
+button.edit=수정
+button.delete=삭제
+button.back=뒤로
+button.confirm=확인
+button.view=보기
+button.search=검색
+button.reset=초기화
+button.close=닫기
+button.next=다음
+button.previous=이전
+button.yes=예
+button.no=아니오
 
 # Stock Navigation
 stock.nav.dashboard=대시보드
@@ -151,16 +181,8 @@ discount.min-order-amount=최소 주문금액
 discount.usage-limit=사용 제한
 discount.used-count=사용 횟수
 
-# Forms
-form.required=필수 입력 항목입니다
-form.invalid-format=형식이 올바르지 않습니다
-form.min-length=최소 {0}자 이상 입력해주세요
-form.max-length=최대 {0}자까지 입력 가능합니다
-form.positive-number=양수만 입력 가능합니다
-form.invalid-email=이메일 형식이 올바르지 않습니다
-form.invalid-phone=전화번호 형식이 올바르지 않습니다
 
-# Messages
+# System Messages
 message.save-success=성공적으로 저장되었습니다
 message.save-failed=저장에 실패했습니다
 message.delete-success=성공적으로 삭제되었습니다
@@ -173,8 +195,6 @@ message.error-occurred=오류가 발생했습니다
 # Pagination
 page.first=처음
 page.last=마지막
-page.previous=이전
-page.next=다음
 page.items-per-page=페이지당 항목 수
 page.showing=총 {0}개 중 {1}-{2}개 표시
 
