--- a/src/main/resources/messages/validation/validation.properties
+++ b/src/main/resources/messages/validation/validation.properties
@@ -40,3 +40,31 @@ validation.nickname.new.placeholder=새 닉네임을 입력하세요
 validation.current.password.placeholder=현재 비밀번호를 입력하세요
 validation.new.password.placeholder=새 비밀번호를 입력하세요 (변경하지 않으려면 비워두세요)
 validation.new.password.confirm.placeholder=새 비밀번호를 다시 입력하세요
+
+# Product Validation Messages
+product.validation.name.notblank=상품명은 필수입니다.
+product.validation.name.size=상품명은 100자 이하로 입력해주세요.
+product.validation.code.notblank=상품 코드는 필수입니다.
+product.validation.code.size=상품 코드는 50자 이하로 입력해주세요.
+product.validation.price.min=가격은 0 이상이어야 합니다.
+product.validation.price.digits=가격 형식이 올바르지 않습니다.
+product.validation.description.size=설명은 1000자 이하로 입력해주세요.
+product.validation.barcode.size=바코드는 50자 이하로 입력해주세요.
+product.validation.weight.min=무게는 0 이상이어야 합니다.
+product.validation.dimensions.size=크기는 100자 이하로 입력해주세요.
+
+# Category Validation Messages
+category.validation.name.notblank=카테고리명은 필수입니다.
+category.validation.name.size=카테고리명은 100자 이하로 입력해주세요.
+category.validation.seq.notnull=카테고리 ID는 필수입니다.
+category.validation.description.size=설명은 500자 이하로 입력해주세요.
+
+# Supplier Validation Messages
+supplier.validation.name.notblank=공급업체명은 필수입니다.
+supplier.validation.name.size=공급업체명은 100자 이하로 입력해주세요.
+supplier.validation.contactPerson.size=담당자명은 50자 이하로 입력해주세요.
+supplier.validation.email.format=올바른 이메일 형식이 아닙니다.
+supplier.validation.email.size=이메일은 255자 이하로 입력해주세요.
+supplier.validation.phone.size=전화번호는 20자 이하로 입력해주세요.
+supplier.validation.address.size=주소는 1000자 이하로 입력해주세요.
+supplier.validation.description.size=설명은 1000자 이하로 입력해주세요.
