--- a/src/main/resources/messages/validation/validation.properties
+++ b/src/main/resources/messages/validation/validation.properties
@@ -68,3 +68,9 @@ supplier.validation.email.size=이메일은 255자 이하로 입력해주세요.
 supplier.validation.phone.size=전화번호는 20자 이하로 입력해주세요.
 supplier.validation.address.size=주소는 1000자 이하로 입력해주세요.
 supplier.validation.description.size=설명은 1000자 이하로 입력해주세요.
+
+# Supplier Service Messages
+supplier.service.create.failed=공급업체 등록에 실패했습니다.
+supplier.service.update.failed=공급업체 수정에 실패했습니다.
+supplier.service.activate.failed=공급업체 활성화에 실패했습니다.
+supplier.service.deactivate.failed=공급업체 비활성화에 실패했습니다.
