--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,6 +34,7 @@ logging:
     org.springframework.security: DEBUG
     io.goorm.board.service.UserService: DEBUG
     io.goorm.board.controller.AuthController: DEBUG
+    io.goorm.board.filter.JwtAuthenticationFilter: DEBUG
     org.springframework.security.authentication: TRACE
     org.springframework.security.web: TRACE
   charset:
